add_library(ex1_1_obj OBJECT ex1_1.c)
add_library(ex1_2_obj OBJECT ex1_2.c)
add_library(ex1_3_obj OBJECT ex1_3.c)
add_library(ex1_4_obj OBJECT ex1_4.c)
add_library(ex1_5_obj OBJECT ex1_5.c)
add_library(ex1_6_obj OBJECT ex1_6.c)
add_library(ex1_7_obj OBJECT ex1_7.c)
add_library(ex1_8_obj OBJECT ex1_8.c)
add_library(ex1_9_obj OBJECT ex1_9.c)
add_library(ex1_10_obj OBJECT ex1_10.c)
add_library(ex1_11_obj OBJECT ex1_11.c)
add_library(ex1_12_obj OBJECT ex1_12.c)
add_library(ex1_13_obj OBJECT ex1_13.c)
add_library(ex1_14_obj OBJECT ex1_14.c)