add_library(ex2_1_obj OBJECT ex2_1.c)
add_library(ex2_2_obj OBJECT ex2_2.c)
add_library(ex2_3_obj OBJECT ex2_3.c)
add_library(ex2_4_obj OBJECT ex2_4.c)
add_library(ex2_5_obj OBJECT ex2_5.c)
add_library(ex2_6_obj OBJECT ex2_6.c)
add_library(ex2_7_obj OBJECT ex2_7.c)
add_library(ex2_8_obj OBJECT ex2_8.c)